# fastapi_docker_compose

./: docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  envrc.dev
proxy/: Dockerfile  app.conf  nginx.conf
tasks/: __init__.py  utils.py
web/: pyproject.toml
web/app/: __init__.py
web/docker/: Dockerfile  entrypoint_inject.sh
web/requirements/: requirements-dev.txt  requirements.txt
