[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.52.0"
uvicorn = "^0.11.3"
httpx = "^0.12.1"
fastapi-utils = "^0.2.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
